--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
- <!-- Contact Section -->
+    <!-- Contact Section -->
     <section id="contact" class="inverted">
-        <div class="pattern-overlay">
-        <div class="container vertically-centered">
+        <div class="pattern-overlay"></div>
+        <div class="container">
             <div class="row">
                 <div clas="col-lg-12 text-center">
                     <div class="divider">
@@ -12,32 +12,32 @@
             <br>
             <br>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2 col-xs-9 col-xs-offset-1">
+                    <div id="form-info"></div>
                     <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/daniel@pinecode.ca" novalidate>
                         <div class="row control-group">
-                            <div class="form-group col-xs-4 floating-label-form-group controls">
+                            <div class="form-group col-lg-4 floating-label-form-group controls">
                                 <label>Name</label>
                                 <input type="text" class="form-control" name="name" placeholder="Name" id="name">
                             </div>
 
-                            <div class="form-group col-xs-4 floating-label-form-group controls">
+                            <div class="form-group col-lg-4 floating-label-form-group controls">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" name="email" placeholder="Email Address" id="email">
                             </div>
 
-                            <div class="form-group col-xs-4 floating-label-form-group controls">
+                            <div class="form-group col-lg-4 floating-label-form-group controls">
                                 <label>Phone Number</label>
                                 <input type="tel" class="form-control" name="phone" placeholder="Phone Number" id="phone">
                             </div>
                         </div>
                         <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                            <div class="form-group floating-label-form-group controls">
                                 <label>Message</label>
                                 <textarea rows="5" class="form-control" name="message" placeholder="Message" id="message"></textarea>
                             </div>
                         </div>
                         <br>
-                        <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-lg-4 col-lg-offset-4">
                                 <button type="submit" class="btn btn-outline btn-lg btn-block">Send</button>
@@ -46,6 +46,5 @@
                     </form>
                 </div>
             </div>
-        </div>
         </div>
     </section>
