--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,15 @@
-    <header class="content-section">
-        <div class="pattern-overlay subdued">
-            <div class="grid-bg"></div>
-            <div class="container vertically-centered">
-                <div class="row parallax">
-                    <div class="col-lg-12">
-                        <img src="img/logo256.png" id="hero-logo" class="img-centered" alt="">
-                        <div id="hero-content">
-                            <h1>We're <strong>Pinecode.</strong></h1>
-                            <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers,<br>
-                            and creative folk from the gardens of Victoria, British Columbia.</em></p>
-                            <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
-                        </div>
+    <!-- Header -->
+    <header>
+        <div class="pattern-overlay subdued"></div>
+        <div class="grid-bg"></div>
+        <div class="container">
+            <div class="row parallax">
+                <div class="col-lg-12">
+                    <img src="img/logo256.png" id="hero-logo" class="img-centered" alt="">
+                    <div id="hero-content">
+                        <h1>We're <strong>Pinecode.</strong></h1>
+                        <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers, and creative folk from the gardens of Victoria, British Columbia.</em></p>
+                        <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
             </div>
