--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,7 @@
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ "/css/entypo/css/stylesheet.css" | prepend: site.baseurl }}">
-
+    <!-- Typekit fonts -->
     <script type="text/javascript" src="//use.typekit.net/lme7wgr.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
