Fixed white gap

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="pattern-overlay subdued"></div>
         <div class="grid-bg"></div>
         <div class="container">
-            <div class="row parallax">
+            <div class="parallax">
                 <div class="col-lg-12">
                     <img src="img/logo256.png" id="hero-logo" class="img-centered" alt="">
                     <div id="hero-content">
