--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "dist/css/pinecode.min.css" | prepend: site.baseurl }}">
 
     <!-- Typekit fonts -->
     <script type="text/javascript" src="//use.typekit.net/lme7wgr.js"></script>
