--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,17 +1,1 @@
- <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery-1.11.0.js" | prepend: site.baseurl }}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="{{ "/js/headroom.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/classie.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/jquery.easing.min.js" | prepend: site.baseurl }}"></script>
-    <script src="{{ "/js/jquery.autogrowtextarea.min.js" | prepend: site.baseurl }}"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="{{ "/js/contact.js" | prepend: site.baseurl }}"></script>
-
-    <!-- Custom JavaScript -->
-    <script src="{{ "/js/pinecode.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/dist/js/pinecode.js" | prepend: site.baseurl }}"></script>
