--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="parallax">
                 <div class="col-lg-12">
-                    <img src="img/logo256.png" id="hero-logo" class="img-centered" alt="">
+                    <img src="dist/img/logo256.png" id="hero-logo" class="img-centered" alt="">
                     <div id="hero-content">
                         <h1>We're <strong>Pinecode.</strong></h1>
                         <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers, and creative folk from the gardens of Victoria, British Columbia.</em></p>
