--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #0082FF;
     text-decoration: none;
 }
 
@@ -281,7 +281,7 @@ header .btn-outline:hover, #contact .btn-outline:hover {
 header {
     text-align: center;
     color: #fff;
-    background-image: url('dist/img/hero-bg.jpg');
+    background-image: url('/dist/img/hero-bg.jpg');
     background-size: cover;
     background-position-y: 50%;
     position: relative;
@@ -328,7 +328,7 @@ header p.lead {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-image: url('dist/img/grid.png');
+    background-image: url('/dist/img/grid.png');
     background-repeat: no-repeat;
     background-position: 50% 0;
 }
@@ -358,10 +358,6 @@ header p.lead {
 }
 
 /* ----- SERVICES ----- */
-
-#who-we-are {
-    background: url(http://subtlepatterns.com/patterns/brillant.png);
-}
 
 #who-we-are img {
     width: 100%;
@@ -432,8 +428,7 @@ header p.lead {
 
 #contact {
     padding: 0;
-    /*background: url(http://31.media.tumblr.com/560a35b8fb40b1c069fa18ef9f2ea179/tumblr_n4cm73ozlb1st5lhmo1_1280.jpg);*/
-    background: url(dist/img/contact-bg.jpg);
+    background: url('/dist/img/contact-bg.jpg');
     background-color: #333;
     background-size: cover;
     background-position: 50%;
@@ -627,7 +622,7 @@ form .row:first-child .floating-label-form-group {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #0A1E23;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -637,7 +632,7 @@ form .row:first-child .floating-label-form-group {
     z-index: 1052;
     width: 1px;
     height: 75px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #0A1E23;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
