Added a new event

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <div id="hero-content">
                         <h1>We're <strong>Pinecode.</strong></h1>
                         <p class="lead"><em>A small, perfectly shaped collaboration of developers, designers, and creative folk from the gardens of Victoria, British Columbia.</em></p>
-                        <a href="#contact" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
+                        <a href="#contact" id="work-with-us" title="Work With us" class="btn btn-outline btn-lg page-scroll">Work With Us</a>
                     </div>
                 </div>
             </div>
