Added blog theme foundation

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
 
             <div class="col-lg-8 col-lg-offset-2 col-xs-9 col-xs-offset-1">
                 <div id="form-info"></div>
-                <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/sales@pinecode.ca" novalidate>
+                <form name="sentMessage" id="contactForm" method="POST" action="//forms.brace.io/{{ site.email }}" novalidate>
                     <div class="row control-group">
                         <div class="form-group col-lg-4 floating-label-form-group controls">
                             <label>Name</label>
