--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,12 @@
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-6">
-                        <p><small>{% for address in site.address %}
-                            {{ address.line }}<br>
-                        {% endfor %}</small></p>
-                    </div>
-                    <div class="footer-col col-md-6">
-                        <ul class="list-inline">
-                            {% for network in site.social %}
-                            <li>
-                                <a href="{{ network.url }}" class="btn-social btn-outline"><i class="entypo-social {{ network.title }}"></i></a>
-                            </li>
-		                    {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-12">
-                        <h6 class="subdued">Copyright &copy; {{ site.title }} 20{{ site.time | date: '%y' }}</h6>
+                        <h5 class="subdued">Copyright &copy; {{ site.title }} 20{{ site.time | date: '%y' }} &mdash; <a href="/#contact">Contact Us</a></h5>
                     </div>
                 </div>
             </div>
-        </div>
     </footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
