--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,12 @@
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ "dist/css/pinecode.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/dist/css/pinecode.css" | prepend: site.baseurl }}">
 
-    <!-- Typekit fonts -->
-    <script type="text/javascript" src="//use.typekit.net/lme7wgr.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <!-- Source Sans Pro from Google's font CDN -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,900,300italic,600italic,900italic' rel='stylesheet' type='text/css'>
 
+    <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
