--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,16 +13,12 @@
  *      d. Alerts
  * 3. Document Sections
  *      a. Header
- *      b. Services
- *      c. About
- *      d. Portoflio, Portoflio Modals
- *      e. Contact
- *      f. Footer
+ *      b. Blog
+ *      c. Contact
+ *      d. Footer
  * 4.
  * 5. Miscellaneous
- *      a. Dividers
- *      b. Headroom Plugin
- *      c. Helpers
+ *      a. Helpers
  */
 
 /**
@@ -38,11 +34,11 @@ body {
 }
 
 html, body {
-    height:100%;
+    height: 100%;
 }
 
 p {
-    font-size: 20px;
+    font-size: 1.75rem;
 }
 
 p.lead {
@@ -60,8 +56,15 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #0082FF;
     text-decoration: none;
+}
+
+a {
+    transition: color 0.5s;
+}
+
+a:hover {
+    color: #006BD1;
 }
 
 h1,
@@ -70,7 +73,6 @@ h3,
 h4,
 h5,
 h6 {
-    text-transform: uppercase;
     font-family: 'Source Sans Pro', 'Open Sans', Helvetica, Arial, sans-serif;
     font-weight: 100;
 }
@@ -80,9 +82,9 @@ h2 {
 }
 
 hr {
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 40px;
-    border-top: 1px solid rgba(0,0,0,.15);
+    border-top: 1px solid rgba(0, 0, 0, .075);
 }
 
 /**
@@ -241,10 +243,6 @@ section h2 {
     font-weight: 600
 }
 
-header .btn-outline:hover, #contact .btn-outline:hover {
-    background: rgba(0, 130, 255, 0.66);
-}
-
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active,
@@ -287,6 +285,10 @@ header {
     position: relative;
     text-shadow: 0 2px 0 rgba(0,0,0,0.5);
     min-height: 100%;
+}
+
+.splash header h1, .splash header h2 {
+    text-transform: uppercase;
 }
 
 header h1 {
@@ -357,71 +359,61 @@ header p.lead {
     opacity: 1;
 }
 
-/* ----- SERVICES ----- */
-
-#who-we-are img {
-    width: 100%;
-    max-width: 256px;
-    margin: 0 auto;
+header .btn-outline:hover, #contact .btn-outline:hover {
+    background: rgba(0, 130, 255, 0.66);
 }
 
-#who-we-are hr {
-    visibility: hidden;
-}
+/* ----- BLOG ----- */
 
-#who-we-are ul {
-    list-style-type: none;
-}
-
-#who-we-are li {
-    display: inline-block;
-    position: relative;
-    z-index: 2;
-}
-
-#who-we-are li img {
-    width: 128px;
-}
-
-#who-we-are li:first-child {
-    position: relative;
-    left: 35px;
-}
-
-#who-we-are li:last-child {
-    position: relative;
-    right: 35px;
-}
-
-#who-we-are li:first-child, #who-we-are li:last-child {
-    z-index: 1;
-}
-
-.service, .service h3 {
-    text-align: center;
-    margin-top: 2rem;
-}
-
-.service h3 {
-    font-weight: 500;
-    margin: 0 auto;
-    padding: 2rem 0;
-    border-bottom: 1px solid rgba(0,0,0,0.15);
-}
-
-.service {
+#blog-posts {
     padding: 0;
 }
 
-.service p {
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 1.5rem 3rem;
+body.blog header {
+    min-height: 0;
 }
 
-.service img {
-    max-width: 172px;
-    width: 100%;
+.blog .highlight {
+    margin: 3rem auto;
+}
+
+.posts ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.posts li {
+    width: 20%;
+    padding: 0 5% 0 0;
+    margin: 0;
+    display: inline-block;
+    background-size: cover;
+    background-position: 50%;
+}
+
+.meta {
+    opacity: 0.65;
+    transition: opacity 0.5s;
+}
+
+.meta:hover {
+    opacity: 1;
+}
+
+.meta ul {
+    margin: 0 0 25px 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.meta ul li {
+    display: inline;
+    margin-left: 3rem;
+}
+
+.meta ul li:first-child {
+    margin-left: 0;
 }
 
 /* ----- CONTACT ----- */
@@ -498,173 +490,19 @@ form .row:first-child .floating-label-form-group {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-/* ----- PORTFOLIO ----- */
-
-#portfolio .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
-
-#portfolio .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba(20,27,30,.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    top: 27.5%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    color: #fff;
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#portfolio .portfolio-item:hover .portfolio-link .caption .caption-content {
-    top: 30%;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    font-size: 5rem;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#portfolio * {
-    z-index: 2;
-}
-
-#portfolio p {
-    font-size: 2.25rem;
-}
-
-#portfolio .client-name {
-    text-transform: uppercase;
-    margin-bottom: 0;
-}
-
-#portfolio p>small {
-    font-size: 1.75rem;
-    font-style: italic;
-}
-
-/* ----- PORTFOLIO MODALS ----- */
-
-.portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    text-align: center;
-    color: #fff;
-    background: rgba(20,27,30,.95);
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.portfolio-modal hr {
-    border-top: 1px solid rgba(255,255,255,0.1);
-}
-
-.portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3rem;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content .item-details {
-    margin: 30px 0;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: .3;
-}
-
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    background-color: #0A1E23;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #0A1E23;
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
-
-@media(min-width:767px) {
-    #portfolio .portfolio-item {
-        margin: 0 0 30px;
-    }
-}
-
 /* ----- FOOTER ----- */
 
 footer {
+    background-color: #111;
     color: #fff;
+}
+
+footer .container {
+    padding: 3em 0;
 }
 
 footer h3 {
     margin-bottom: 30px;
-}
-
-footer .footer-above {
-    padding-top: 25px;
-    background-color: #111;
-}
-
-footer .footer-col {
-    margin-bottom: 25px;
-}
-
-footer .footer-below {
-    padding: 25px 0;
 }
 
 .btn-social {
@@ -708,106 +546,6 @@ footer .footer-below {
  * -----------------------------------------------------------------------------
  * 5. MISCELLANEOUS
  * -----------------------------------------------------------------------------
- */
-
-/* ----- DIVIDERS ----- */
-
-.divider {
-  margin: 0rem;
-  padding: 0em;
-
-  line-height: 1;
-  height: auto;
-
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
-  position: relative;
-
-  background-color: transparent;
-
-  font-size: 0.875rem;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-
-  color: rgba(0, 0, 0, 0.8);
-  top: 0%;
-  left: 0%;
-}
-
-.divider:before,
-.divider:after {
-  position: absolute;
-  top: 50%;
-  content: " ";
-  z-index: 3;
-
-  width: 30%;
-  top: 50%;
-  height: 0%;
-
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.divider:before {
-  left: 0%;
-  margin-left: -1.5rem;
-}
-.divider:after {
-  left: auto;
-  right: 0%;
-  margin-right: -1.5rem;
-}
-
-/**
- * INVERTED DIVIDERS
- */
-
-.divider.inverted {
-  color: rgba(255, 255, 255, 1);
-}
-
-.inverted.divider {
-  color: rgba(255, 255, 255, 0.9);
-}
-
-.divider.inverted,
-.divider.inverted:after,
-.divider.inverted:before {
-  border-top-color: rgba(0, 0, 0, 0.15);
-  border-bottom-color: rgba(255, 255, 255, 0.15);
-
-  border-left-color: rgba(0, 0, 0, 0.15);
-  border-right-color: rgba(255, 255, 255, 0.15);
-}
-
-/* ----- HEADROOM ----- */
-
-.headroom--pinned {
-    display: block;
-}
-
-.headroom {
-    transition: background-color .5s, transform 200ms;
-}
-
-.headroom--pinned {
-    transform: translateY(0%);
-}
-
-.headroom--unpinned {
-    transform: translateY(-100%);
-}
 
 /* ----- HELPERS ----- */
 
